frontend.yaml
apiVersion: v1
kind: Deployment 
metadata:
  name: usermgmt-webapp 
  labels:
    app: usermgmt-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usermgmt-webapp
  template:
    metadata:
      labels:
        app: usermgmt-webapp
    spec:
    #i want to deploy my front end pod
    #before i deploy my frontend i want to ensure the connectivity to my database them only it should deploy my frontend. 
      initContainer:
        - name: init-db
          image: busybox #using this i can run shell script. 
          command: ['sh', '-c', 'echo -e "Checking for the availability of MySQL Server deployment"; while ! nc -z mysql 3306; do sleep 1; printf "-"; done; echo -e "  >> MySQL DB Server has started";']  
      container:
        - name: usermgmt-webapp
          image: stacksimplify/kube-usermgmt-webapp:1.0.0-MySQLDB
          ports:
            - container: 8080
