deploymentforlbservice.yaml
apiVersion: v1
kind: Service 
metadata:
  name: app1-nginx-deployment-service
spec:
  type: ClusterIP
  selector:
    app1: nginx 
  ports:
    - port: 80
      targetPort: 80
