mysqlsvc.yaml
apiVersion: v1
kind: Service 
metadata:
  namme: mysql
spec:
  selector:
    app: mysql1
  ports:
    - port: 3306
  clusterIP: None
