statelessservice.yaml
apiVersion: v1
kind: Service 
metadata:
  name: nginx 
  labels:
    app: nginx 
spec: 
  ports:
    - port: 80
      name: web
    clusterIP: None 
    selector:
      app: nginx
